--- a/src/App.css
+++ b/src/App.css
@@ -29,18 +29,24 @@ height: 5vh;
 .main-container >div{
     flex-basis: 30%;
     height: 23vh;
+    border-top-color: blue;
     background-color: rgb(255, 255, 255);
     margin-bottom: 0.375vh;
     margin-top: 0.375vh;
-    border-radius: 2px;
+    border-radius: 8px;
 }
 body{
     background-color:#e4e2e2;
 }
-.main-container >div:hover
+/* .main-container >div:hover
 {
     transform: scale(1.1);
     box-shadow: 2px 2px 4px 4px;
     
+} */
+.canvasStyle
+{
+    height: 200px !important;
+    width: 600px !important;
 }
 
